# reasons-app

./: CLAUDE.md  Cargo.toml  README.md  reasons-mcp.skill.md
.github/workflows/: release.yml
reasons-cli/: Cargo.toml
reasons-cli/src/: main.rs
reasons-core/: Cargo.toml
reasons-core/src/: config.rs  lib.rs  mcp.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
