[package]
name = "reasons-core"
version = "0.1.0"
edition = "2021"
description = "Truth Maintenance System core library"
license = "MIT"

[dependencies]
rusqlite = { version = "0.31", features = ["bundled", "vtab"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
rmcp = { version = "2", features = ["server", "macros", "transport-io", "transport-streamable-http-server"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "sync", "net"] }
schemars = "1"
axum = "0.8"
axum-server = { version = "0.8", features = ["tls-rustls"] }
tokio-util = "0.7"

[dev-dependencies]
tempfile = "3"
